fixed text alignment of hero section in desktop view of doctor.html

--- a/src/client/css/doctors.css
+++ b/src/client/css/doctors.css
@@ -380,7 +380,7 @@
   }
 
   .header-title {
-    left: 6.25rem;
+    left: 5rem;
     font-family: "Nexa-Light";
   }
 
